@@ -8,7 +8,7 @@ use warnings;
 use version 0.77; our $VERSION = version->declare('v0.5.4');
 
 use Carp qw/ croak /;
-use List::MoreUtils qw/ natatime /;
+use List::AllUtils qw/ natatime /;
 
 use namespace::autoclean;
 
@@ -25,7 +25,7 @@ modules:
 
 =over
 
-=item L<List::MoreUtils>
+=item L<List::AllUtils>
 
 =item L<namespace::autoclean>
 
@@ -229,12 +229,12 @@ sub _compile_match {
 }
 
 my %KEY2FN = (
-    '-all'	=> List::MoreUtils->can('all'),
-    '-and'	=> List::MoreUtils->can('all'),
-    '-any'	=> List::MoreUtils->can('any'),
-    '-notall'	=> List::MoreUtils->can('notall'),
-    '-notany'	=> List::MoreUtils->can('none'),
-    '-or'	=> List::MoreUtils->can('any'),
+    '-all'	=> List::AllUtils->can('all'),
+    '-and'	=> List::AllUtils->can('all'),
+    '-any'	=> List::AllUtils->can('any'),
+    '-notall'	=> List::AllUtils->can('notall'),
+    '-notany'	=> List::AllUtils->can('none'),
+    '-or'	=> List::AllUtils->can('any'),
 );
 
 sub _key2fn {
